package eu.venthe.pipeline.orchestrator.organizations.domain.domain;

import eu.venthe.pipeline.orchestrator.organizations.domain.OrganizationId;
import lombok.Value;

@Value
public class Organization {
    OrganizationId organizationId;
}
